--- a/Lingo/Requirements.txt
+++ b/Lingo/Requirements.txt
@@ -1,6 +1,12 @@
+Dataset library ------>> !pip install datasets
+Noisereduce library ------->> !pip install noisereduce
+Tensorflow library ---------->> !pip install tensorflow
+Jiwer library --------->> !pip install jiwer
+Librose library ---------->> !pip install librosa
+
 This Croups from transcript
 https://www.kaggle.com/datasets/fatmaalzhraahmed/croups-2
-This is a Models for train and I am attached to this email
+This is a Models for train
 https://www.kaggle.com/datasets/fatmaalzhraahmed/mtc-train
 This is a Train Data
 https://www.kaggle.com/datasets/amrkhaledsaleh/arabic-egy-asr-16k
